--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "build:web": "expo export --platform web",
+    "dev": "EXPO_NO_TELEMETRY=1 npx expo start",
+    "build:web": "npx expo export --platform web",
     "lint": "expo lint"
   },
   "dependencies": {
@@ -34,11 +34,13 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
+    "react-native-web": "^0.19.13",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "expo-cli": "^6.3.10",
     "typescript": "^5.3.3"
   }
 }
