--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "52.0.33",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-config": "~0.19.0",
+    "@expo/prebuild-config": "~8.0.0",
+    "expo": "52.0.36",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
+    "expo-doctor": "^1.12.7",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
-    "expo-localization": "~14.0.0",
+    "expo-localization": "16.0.1",
     "expo-router": "4.0.17",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "^2.0.1",
@@ -29,11 +33,11 @@
     "i18n-js": "^4.3.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "^2.23.0",
-    "react-native-reanimated": "^3.16.7",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.4.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "^0.19.13",
     "zustand": "^4.5.0"
   },
