--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 npx expo start",
     "start": "expo start",
@@ -27,13 +26,14 @@
     "install:clean": "rm -rf node_modules package-lock.json && npm install"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
     "@expo/config-plugins": "~9.0.0",
     "@expo/metro-config": "~0.19.0",
     "@expo/prebuild-config": "~8.0.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "expo": "52.0.36",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
@@ -55,9 +55,9 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "^0.19.13",
-    "zustand": "^4.5.0",
-    "react-native-svg": "15.8.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -68,8 +68,8 @@
     "eslint-config-expo": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "prettier": "^3.0.0",
     "expo-cli": "^6.3.10",
+    "prettier": "^3.0.0",
     "typescript": "^5.3.3"
   },
   "keywords": [
